--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -1,4 +1,23 @@
 
+.responses {
+    width: 80%;
+}
+
+.responses_name {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-right: 10px;
+    padding-left: 20px;
+}
+
+.responses_range {
+    width: 50%;
+}
+
+
+
 .flex {
     display: flex;
     grid-gap: 40px;
