--- a/src/styling/TimeSlotTable.css
+++ b/src/styling/TimeSlotTable.css
@@ -13,13 +13,15 @@
     color: #ffffff;
     text-align: left;
 }
+
 .styled-table th,
-.styled-table td {
+.styled-table thead td {
     padding: 12px 15px;
 }
 
 .styled-table tbody td {
     border-right: 1px solid #dddddd;
+    padding: 2px 1px;
 }
 /*
 .styled-table tbody tr {
@@ -48,7 +50,9 @@ th {
 */
 
 
-
+.timeslotRow{
+    height: 15px;
+}
 
 .timeslotClickableHour{
     border-top: 2px solid #282c34;
@@ -64,15 +68,13 @@ th {
 
 .timeslotHourTitleCell {
     vertical-align:top;
-    display:inline-block;
-    *display:inline;
-    height: 12px;
     width:70px;
-    font-size:11px;
-    margin-top: 0;
+    font-size:10px;
     background-color: #282c34;
     color: white;
     border: 1px solid #282c34;
+    -webkit-user-select: none;
+    -moz-user-select: none;
 }
 
 .styled-table tbody tr td:first-of-type {
