--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -3,8 +3,9 @@
     width: 80%;
 }
 
-.responses_name {
-    width: 50%;
+/*
+.responses_checkbox {
+    width: 10%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -12,8 +13,32 @@
     padding-left: 20px;
 }
 
+.responses_name {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-right: 10px;
+    padding-left: 20px;
+    text-align: left;
+}
+
 .responses_range {
-    width: 50%;
+    width: 30%;
+    display: flex;
+}
+*/
+
+.responses_row {
+    overflow-x: visible;
+}
+
+.responses_name {
+    text-align: left;
+}
+
+.responses_range {
+    width: 30%
 }
 
 
@@ -40,4 +65,10 @@ input[type="time"] {
 #create-event-button {
     border-radius: 5px;
     width: 120px;
+}
+
+#advanced-settings-button{
+    font-size: 12px;
+    border-radius: 10px;
+    outline: none;
 }
