--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -1,44 +1,21 @@
 
-.responses {
-    width: 80%;
+.responses-row {
+    table-layout: fixed;
+    overflow-x: hidden;
 }
 
-/*
-.responses_checkbox {
-    width: 10%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-right: 10px;
-    padding-left: 20px;
-}
-
-.responses_name {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-right: 10px;
-    padding-left: 20px;
+.responses-name {
     text-align: left;
+    vertical-align: baseline;
 }
 
-.responses_range {
-    width: 30%;
-    display: flex;
-}
-*/
-
-.responses_row {
-    overflow-x: visible;
+.responses-range {
+    vertical-align: top;
 }
 
-.responses_name {
-    text-align: left;
-}
-
-.responses_range {
-    width: 30%
+.responses-required {
+    width: 45px;
+    vertical-align: top;
 }
 
 
