--- a/src/styling/TimeSlotTable.css
+++ b/src/styling/TimeSlotTable.css
@@ -5,6 +5,9 @@
     font-family: sans-serif;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
 }
 /*
 table-layout:fixed;
@@ -29,6 +32,7 @@ word-wrap: break-word;
 
 .styled-table tbody tr {
     height: 9px;
+    text-overflow: clip;
 }
 
 .styled-table tbody tr:last-of-type {
@@ -75,9 +79,6 @@ th {
     background-color: #282c34;
     color: white;
     border: 1px solid #282c34;
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
 }
 
 /*
